--- a/style.css
+++ b/style.css
@@ -28,6 +28,23 @@ h1 {
   border-radius: 1rem;
 }
 
+button {
+  display: block;
+  border-radius: 10px;
+  font-size: 2.5rem;
+  background: #ffff99;
+  border: 1px solid #000;
+  text-align: center;
+  padding: 1rem;
+  margin: 2.5rem auto;
+}
+
+button:hover {
+  cursor: pointer;
+  background: #ffff00;
+  border: 2px solid #000;
+}
+
 .game {
   width: 600px;
   height: 400px;
@@ -62,6 +79,10 @@ h1 {
   width: 100%;
   height: 100%;
   transition:all 0.4s;
+}
+
+.mole:hover {
+  cursor: pointer;
 }
 
 .hole.up .mole {
